--- a/app/src/main/res/layout/activity_databinding.xml
+++ b/app/src/main/res/layout/activity_databinding.xml
@@ -2,6 +2,11 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
         <variable name="user" type="com.example.jetpackexample.databinding.model.User"/>
+        <variable name="userData" type="com.example.jetpackexample.databinding.model.UserData"/>
+        <variable name="userDataObserver" type="com.example.jetpackexample.databinding.model.UserDataObserver"/>
+        <variable
+            name="presenter"
+            type="com.example.jetpackexample.databinding.presenter.DataBindingActivityPresenter" />
     </data>
 <LinearLayout
     android:layout_width="match_parent"
@@ -15,6 +20,28 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@{user.lastName}"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@{userData.firstName}"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@{userData.lastName}"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@{userDataObserver.firstName}"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@{userDataObserver.lastName}"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="@{() -> presenter.onShowData(userDataObserver)}"
+        android:text="@string/show_data_model"
+        android:textColor="@color/colorPrimaryDark"/>
 
 </LinearLayout>
 </layout>
