--- a/app/src/main/res/layout/activity_databinding.xml
+++ b/app/src/main/res/layout/activity_databinding.xml
@@ -42,6 +42,12 @@
         android:onClick="@{() -> presenter.onShowData(userDataObserver)}"
         android:text="@string/show_data_model"
         android:textColor="@color/colorPrimaryDark"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="@{() -> presenter.showList()}"
+        android:text="@string/start_second_activity"
+        android:textColor="@color/colorPrimaryDark"/>
 
 </LinearLayout>
 </layout>
