--- a/app/src/main/res/layout/activity_twoway.xml
+++ b/app/src/main/res/layout/activity_twoway.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
-        <variable name="userData" type="com.example.jetpackexample.databinding.model.UserData"/>
+        <variable name="userDataObserver" type="com.example.jetpackexample.databinding.model.UserDataObserver"/>
     </data>
 <LinearLayout
     android:layout_width="match_parent"
@@ -10,15 +10,15 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@{userData.firstName}"/>
+        android:text="@{userDataObserver.firstName}"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@{userData.lastName}"/>
+        android:text="@{userDataObserver.lastName}"/>
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@={userData.firstName}"
+        android:text="@={userDataObserver.firstName}"
         android:inputType="text"
         android:autofillHints="@string/hint_first_name"
         android:hint="@string/hint_first_name"/>
