--- a/app/src/main/res/layout/layout_recycler.xml
+++ b/app/src/main/res/layout/layout_recycler.xml
@@ -10,10 +10,9 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:adapter="@{myAdapter}"
